kube-prod/cvat-kubernetes-yamls/cvat-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
   
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: cvat-db
  name: cvat-db
  namespace: cvat-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: cvat-db
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
      
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/cvat: "true"
        io.kompose.service: cvat-db
    spec:
      containers:
        - env:
            - name: CVAT_POSTGRES_HOST
              value: cvat-db
            - name: POSTGRES_DB
              value: cvat
            - name: POSTGRES_HOST_AUTH_METHOD
              value: trust
            - name: POSTGRES_USER
              value: root
            - name: NFS_SERVER
              value: 10.40.41.57
            - name: NFS_PATH
              value: /home/apexon/nfs-storage
          image: postgres:10-alpine
          #imagePullPolicy: Never
          name: cvat-db
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: cvat-db
      restartPolicy: Always
      volumes:
        - name: cvat-db
          persistentVolumeClaim:
            claimName: cvat-db
status: {}
