kube-prod/cvat-kubernetes-yamls/cvat-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    
   
    traefik.enable: "true"
    traefik.http.routers.cvat.entrypoints: web
    traefik.http.routers.cvat.rule: Host(`localhost`) && PathPrefix(`/api/`, `/git/`, `/opencv/`, `/static/`, `/admin`, `/documentation/`, `/django-rq`)
    traefik.http.services.cvat.loadbalancer.server.port: "8080"
  creationTimestamp: null
  labels:
    io.kompose.service: cvat
  name: cvat
  namespace: cvat-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: cvat
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 1
  template:
    metadata:
      annotations:
        traefik.enable: "true"
        traefik.http.routers.cvat.entrypoints: web
        traefik.http.routers.cvat.rule: Host(`localhost`) && PathPrefix(`/api/`, `/git/`, `/opencv/`, `/static/`, `/admin`, `/documentation/`, `/django-rq`)
        traefik.http.services.cvat.loadbalancer.server.port: "8080"
      creationTimestamp: null
      labels:
        io.kompose.network/cvat: "true"
        io.kompose.service: cvat
    spec:
      containers:
        - env:
            - name: ADAPTIVE_AUTO_ANNOTATION
              value: "false"
            - name: ALLOWED_HOSTS
              value: '*'
            - name: CVAT_ANALYTICS
              value: "1"
            - name: CVAT_POSTGRES_HOST
              value: cvat-db
            - name: CVAT_REDIS_HOST
              value: cvat-redis
            - name: DJANGO_LOG_SERVER_HOST
              value: logstash
            - name: DJANGO_LOG_SERVER_PORT
              value: "8080"
            - name: DJANGO_MODWSGI_EXTRA_ARGS
            - name: no_proxy
              value: elasticsearch,kibana,logstash,nuclio,opa,
            - name: NFS_SERVER
              value: 10.40.41.57
            - name: NFS_PATH
              value: /home/apexon/nfs-storage
            - name: NVIDIA_VISIBLE_DEVICES
              value: "all"
          # command: 
          #   - "/home/django"
          #   - "-c"
          #   - "python manage.py runserver 0.0.0.0:8080"
          command: ["/bin/bash"]
          args: ["-c", "python manage.py makemigrations"]
          args: ["-c", "python manage.py migrate"]
          args: ["-c", "python manage.py runserver 0.0.0.0:8080"]
          
          image: 10.40.41.59:5000/apexon-cvat_server  #openvino/cvat_server
          #imagePullPolicy: Never
          name: cvat
          #enable root user
          securityContext:
            capabilities:
              add: ["NET_ADMIN", "SYS_ADMIN"]
            runAsUser: 0
          resources: 
            limits:
              #aliyun.com/gpu-mem: 1
              nvidia.com/gpu: 0  # This will work fine and will not block your GPU for other workloads.
              #nvidia.com/gpu: 0.5 # cannot request fractions.
            # limits:
            # aliyun.com/gpu-mem: 1
            # volumeMode: Filesystem
            # nfs:
            #   server: 10.40.41.57
            #   path: /home/apexon/nfs-storage
            #   readOnly: no
          volumeMounts:
            - mountPath: /home/django/data
              name: cvat-data
            - mountPath: /home/django/keys
              name: cvat-keys
            - mountPath: /home/django/logs
              name: cvat-logs
      restartPolicy: Always
      volumes:
        - name: cvat-data
          persistentVolumeClaim:
            claimName: cvat-data
        - name: cvat-keys
          persistentVolumeClaim:
            claimName: cvat-keys
        - name: cvat-logs
          persistentVolumeClaim:
            claimName: cvat-logs
status: {}
