kube-prod/cvat-kubernetes-yamls/cvat-redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: cvat-redis
  name: cvat-redis
  namespace: cvat-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: cvat-redis
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/cvat: "true"
        io.kompose.service: cvat-redis
    spec:
      containers:
        - image: redis:4.0-alpine
          imagePullPolicy: Never
          name: cvat-redis
          resources: {}
      restartPolicy: Always
status: {}
