kube-prod/cvat-kubernetes-yamls/cvat-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.version: 1.26.1 (a9d05d509)
    traefik.enable: "true"
    traefik.http.routers.cvat-ui.entrypoints: web
    traefik.http.routers.cvat-ui.rule: Host(`localhost`)
    traefik.http.services.cvat-ui.loadbalancer.server.port: "80"
  creationTimestamp: null
  labels:
    io.kompose.service: cvat-ui
  name: cvat-ui
  namespace: cvat-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: cvat-ui
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.version: 1.26.1 (a9d05d509)
        traefik.enable: "true"
        traefik.http.routers.cvat-ui.entrypoints: web
        traefik.http.routers.cvat-ui.rule: Host(`localhost`)
        traefik.http.services.cvat-ui.loadbalancer.server.port: "80"
      creationTimestamp: null
      labels:
        io.kompose.network/cvat: "true"
        io.kompose.service: cvat-ui
    spec:
      containers:
        - image: 10.40.41.59:5000/apexon-cvat_ui   #openvino/cvat_ui
          #imagePullPolicy: Never
          name: cvat-ui
          resources: {}
      restartPolicy: Always
status: {}
