kube-prod/cvat-kubernetes-yamls/cvat_opa-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: cvat-opa
  name: cvat-opa
  namespace: cvat-prod
spec:
  ports:
    - name: "8181"
      port: 8181
      targetPort: 8181
  selector:
    io.kompose.service: cvat-opa
  type: LoadBalancer
# status:
#   loadBalancer: {}
